# ros-sim

brazo_robotico/: CMakeLists.txt  package.xml  setup.cfg  setup.py
brazo_robotico/launch/: launch_ign.py
brazo_robotico/urdf/: brazo.urdf.xacro
brazo_robotico/world/: escenario.world
